--- a/package.json
+++ b/package.json
@@ -23,12 +23,22 @@
   "private": true,
   "packageManager": "npm@11.7.0",
   "dependencies": {
+    "@angular/animations": "^21.1.1",
+    "@angular/cdk": "^21.1.1",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^21.1.1",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "chart.js": "^4.5.1",
+    "dhtmlx-gantt": "^9.1.1",
+    "firebase": "^12.8.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
