--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "api": "json-server --watch db.json --port 3000"
   },
   "prettier": {
     "printWidth": 100,
@@ -25,17 +26,16 @@
   "dependencies": {
     "@angular/animations": "^21.1.1",
     "@angular/cdk": "^21.1.1",
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/fire": "^20.0.1",
-    "@angular/forms": "^21.0.0",
+    "@angular/common": "^21.1.1",
+    "@angular/compiler": "^21.1.1",
+    "@angular/core": "^21.1.1",
+    "@angular/forms": "^21.1.1",
     "@angular/material": "^21.1.1",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/router": "^21.0.0",
+    "@angular/platform-browser": "^21.1.1",
+    "@angular/router": "^21.1.1",
     "chart.js": "^4.5.1",
     "dhtmlx-gantt": "^9.1.1",
-    "firebase": "^12.8.0",
+    "firebase": "^11.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "ng2-charts": "^8.0.0",
@@ -45,9 +45,9 @@
   "devDependencies": {
     "@angular/build": "^21.0.6",
     "@angular/cli": "^21.0.6",
-    "@angular/compiler-cli": "^21.0.0",
+    "@angular/compiler-cli": "^21.1.1",
     "jsdom": "^27.1.0",
-    "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "json-server": "^0.17.4",
+    "typescript": "~5.9.3"
   }
 }
