--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "jspdf": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "vis-data": "^8.0.3",
+    "vis-timeline": "^8.5.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.6",
